<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoogleSearch</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="bt_searchtxt">Search</string>
    <string name="et_hint">Enter Search Query</string>
    <string name="title_activity_image_full_screen">ImageFullScreen</string>
    <string name="title_activity_search_filter">SearchFilter</string>
    <string name="image_size">Image Size:</string>
    <string name="filter">Color Filter:</string>
    <string name="type">File Type:</string>
    <string name="site_filter">Site Filter:</string>
    <string name="btSet">Set Filter</string>

</resources>
