<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SearchFilter" >

    <TextView
        android:id="@+id/tvSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/image_size"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/spSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvSize"
        android:layout_marginLeft="55dp"
        android:entries="@array/image_size_options"
         android:prompt="@string/image_size"
        android:layout_toRightOf="@+id/tvSize" />

    <TextView
        android:id="@+id/tvFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvSize"
        android:layout_below="@+id/spSize"
        android:layout_marginTop="20dp"
        android:text="@string/filter"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/spType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spFilter"
        android:entries="@array/image_type_options"
        android:layout_alignTop="@+id/tvType" />

    <Spinner
        android:id="@+id/spFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spSize"
        android:entries="@array/image_filter_options"
        android:layout_alignTop="@+id/tvFilter" />

    <TextView
        android:id="@+id/tvType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvFilter"
        android:layout_below="@+id/spFilter"
        android:layout_marginTop="21dp"
        android:text="@string/type"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvType"
        android:layout_below="@+id/spType"
        android:text="@string/site_filter"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/etSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvSite"
        android:layout_alignBottom="@+id/tvSite"
        android:layout_alignLeft="@+id/spType"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etSite"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:onClick="setFilter"
        android:text="@string/btSet" />

</RelativeLayout>